# silverbrain

./: .gitignore  README.md  pyproject.toml  quicktest.py
silverbrain/: cell.py  web.py
src/silverbrain/: __init__.py  bundle.py  cell.py  execution.py  maps.py  notebooks.py  nucleus.py  parameterParse.py  polarsDataTypeStrings.py  schema.py  tableInit.py  tableOpSchema.py  tableOps.py  tableProcesses.py  types.py  utilities.py  uuid.py  verify.py  web.py  webNetwork.py  webNu.py  webOld.py  web_graph.py  web_transport.py
src/silverbrain.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/silverbrain/web_templates/: router_web.py
tests/: test_pair_webs.py  test_web.py  test_web_graph.py  test_web_network.py  test_web_toml.py
