[project]
name = "silverbrain"
version = "0.1.0"
description = "AI for Tabular Engineering"
readme = "README.md"
authors = [
    { name = "Evan Mason" }
]
requires-python = ">=3.11"
dependencies = [
    "polars >=1.32, <2",
    "numpy>=1.26.0",
    "pyarrow",
    "pyzmq>=25",
    "uuid7",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "Apache-2.0"
license-files = ["LICENSE"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[tool.uv.sources]
